--- a/src/FSharp.Data.Tdms.Runtime/FSharp.Data.Tdms.Runtime.fsproj
+++ b/src/FSharp.Data.Tdms.Runtime/FSharp.Data.Tdms.Runtime.fsproj
@@ -19,6 +19,7 @@
       <Link>paket-files/ProvidedTypes.fs</Link>
     </Compile>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Map.fs" />
     <Compile Include="Type.fs" />
     <Compile Include="Value.fs" />
     <Compile Include="Reads.fs" />
