--- a/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
+++ b/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
@@ -2,6 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <Authors>Dylan Meysmans</Authors>
+        <Description>TDMS support for F# and C#</Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/mettekou/FSharp.Data.Tdms.git</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
     </PropertyGroup>
 
     <ItemGroup>
