Implement asynchronously reading primitive raw data

--- a/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
+++ b/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
@@ -1,43 +1,40 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <Authors>Dylan Meysmans</Authors>
-        <Description>TDMS support for F# and C#</Description>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <RepositoryUrl>https://github.com/mettekou/FSharp.Data.Tdms.git</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <Compile Include="ProvidedTypes.fsi" />
-      <Compile Include="ProvidedTypes.fs" />
-      <Compile Include="Map.fs" />
-      <Compile Include="Type.fs" />
-      <Compile Include="Value.fs" />
-      <Compile Include="Reads.fs" />
-      <Compile Include="Channel.fs" />
-      <Compile Include="Group.fs" />
-      <Compile Include="Index.fs" />
-      <Compile Include="Property.fs" />
-      <Compile Include="Segment.fs" />
-      <Compile Include="SegmentedIndex.fs" />
-      <Compile Include="File.fs" />
-      <Compile Include="FSharp.Data.Tdms.Runtime.fs" />
-      <Compile Include="FSharp.Data.Tdms.DesignTime.fs" />
-    </ItemGroup>
-    
-    <ItemGroup>
-        <PackageReference Update="FSharp.Core" Version="5.0.0" />
-        <PackageReference Include="MinVer" Version="2.4.0">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
-    </ItemGroup>
-
-    <PropertyGroup>
-        <MinVerTagPrefix>v</MinVerTagPrefix>
-    </PropertyGroup>
-
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <Authors>Dylan Meysmans</Authors>
+    <Description>TDMS support for F# and C#</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/mettekou/FSharp.Data.Tdms.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+  </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="ProvidedTypes.fsi" />
+    <Compile Include="ProvidedTypes.fs" />
+    <Compile Include="Map.fs" />
+    <Compile Include="Type.fs" />
+    <Compile Include="Value.fs" />
+    <Compile Include="Reads.fs" />
+    <Compile Include="Reader.fs" />
+    <Compile Include="Channel.fs" />
+    <Compile Include="Group.fs" />
+    <Compile Include="Index.fs" />
+    <Compile Include="Property.fs" />
+    <Compile Include="Segment.fs" />
+    <Compile Include="SegmentedIndex.fs" />
+    <Compile Include="File.fs" />
+    <Compile Include="FSharp.Data.Tdms.Runtime.fs" />
+    <Compile Include="FSharp.Data.Tdms.DesignTime.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.0" />
+    <PackageReference Include="MinVer" Version="2.4.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Ply" Version="0.3.1" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
+  </ItemGroup>
+  <PropertyGroup>
+    <MinVerTagPrefix>v</MinVerTagPrefix>
+  </PropertyGroup>
 </Project>
