--- a/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
+++ b/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
@@ -10,12 +10,13 @@
   <ItemGroup>
     <Compile Include="ProvidedTypes.fsi" />
     <Compile Include="ProvidedTypes.fs" />
+    <Compile Include="Extended.fs" />
     <Compile Include="Timestamp.fs" />
-    <Compile Include="Type.fs" />
-    <Compile Include="Value.fs" />
     <Compile Include="Reader.fs" />
     <Compile Include="Property.fs" />
+    <Compile Include="Buffer.fs" />
     <Compile Include="Object.fs" />
+    <Compile Include="RawDataBlock.fs" />
     <Compile Include="Segment.fs" />
     <Compile Include="Index.fs" />
     <Compile Include="File.fs" />
