--- a/FSharp.Data.Tdms.DesignTime/FSharp.Data.Tdms.DesignTime.fsproj
+++ b/FSharp.Data.Tdms.DesignTime/FSharp.Data.Tdms.DesignTime.fsproj
@@ -1,28 +1,56 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Library</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <DefineConstants>IS_DESIGNTIME</DefineConstants>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="ProvidedTypes.fsi" />
     <Compile Include="ProvidedTypes.fs" />
-    <Compile Include="../FSharp.Data.Tdms/Extended.fs" />
-    <Compile Include="../FSharp.Data.Tdms/Timestamp.fs" />
-    <Compile Include="../FSharp.Data.Tdms/Property.fs" />
-    <Compile Include="../FSharp.Data.Tdms/Buffer.fs" />
-    <Compile Include="../FSharp.Data.Tdms/RawDataBlock.fs" />
-    <Compile Include="../FSharp.Data.Tdms/Reader.fs" />
-    <Compile Include="../FSharp.Data.Tdms/Channel.fs" />
-    <Compile Include="../FSharp.Data.Tdms/Group.fs" />
-    <Compile Include="../FSharp.Data.Tdms/Object.fs" />
-    <Compile Include="../FSharp.Data.Tdms/Segment.fs" />
-    <Compile Include="../FSharp.Data.Tdms/File.fs" />
-    <Compile Include="../FSharp.Data.Tdms/FSharp.Data.Tdms.Runtime.fs" />
+    <Compile Include="../FSharp.Data.Tdms/Extended.fs">
+      <Link>Extended.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/Timestamp.fs">
+      <Link>Timestamp.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/Property.fs">
+      <Link>Property.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/Buffer.fs">
+      <Link>Buffer.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/RawDataBlock.fs">
+      <Link>RawDataBlock.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/Reader.fs">
+      <Link>Reader.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/Channel.fs">
+      <Link>Channel.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/Group.fs">
+      <Link>Group.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/Object.fs">
+      <Link>Object.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/Segment.fs">
+      <Link>Segment.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/File.fs">
+      <Link>File.fs</Link>
+    </Compile>
+    <Compile Include="../FSharp.Data.Tdms/FSharp.Data.Tdms.Runtime.fs">
+      <Link>FSharp.Data.Tdms.Runtime.fs</Link>
+    </Compile>
     <Compile Include="FSharp.Data.Tdms.DesignTime.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.0" />
     <PackageReference Include="Ply" Version="0.3.1" />
   </ItemGroup>
 
