Include type providers SDK for design-time assembly

--- a/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
+++ b/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
@@ -31,7 +31,11 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="$(OutputPath)\FSharp.Data.Tdms.DesignTime.dll">
+    <Content Include="$(OutputPath)\publish\FSharp.Data.Tdms.DesignTime.dll">
+      <Pack>true</Pack>
+      <PackagePath>lib\$(TargetFramework)</PackagePath>
+    </Content>
+    <Content Include="$(OutputPath)\publish\FSharp.TypeProviders.SDK.dll">
       <Pack>true</Pack>
       <PackagePath>lib\$(TargetFramework)</PackagePath>
     </Content>
