Only include design-time assembly in library directory of NuGet package

--- a/FSharp.Data.Tdms.DesignTime/FSharp.Data.Tdms.DesignTime.fsproj
+++ b/FSharp.Data.Tdms.DesignTime/FSharp.Data.Tdms.DesignTime.fsproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <DefineConstants>IS_DESIGNTIME;$(DefineConstants)</DefineConstants>
+    <DefineConstants>IS_DESIGNTIME</DefineConstants>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
