--- a/FSharp.Data.Tdms.DesignTime/FSharp.Data.Tdms.DesignTime.fsproj
+++ b/FSharp.Data.Tdms.DesignTime/FSharp.Data.Tdms.DesignTime.fsproj
@@ -48,8 +48,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="6.0.1" />
-    <PackageReference Include="FSharp.TypeProviders.SDK" Version="7.0.3" /> 
+    <PackageReference Include="FSharp.TypeProviders.SDK" Version="7.0.3" />
+    <PackageReference Include="MinVer" Version="2.5.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="FSharp.Core" Version="6.0.3" /> 
   </ItemGroup>
 
 </Project>
