--- a/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
+++ b/FSharp.Data.Tdms/FSharp.Data.Tdms.fsproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FSharp.Data.Tdms.DesignTime\FSharp.Data.Tdms.DesignTime.fsproj">
       <IsFSharpDesignTimeProvider>true</IsFSharpDesignTimeProvider>
+      <PrivateAssets>all</PrivateAssets>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
