--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run fsdocs
         run: dotnet fsdocs build --eval --strict --properties Configuration=Release
       - name: Pack
-        run: dotnet pack --no-restore -c Release --include-source -p:SymbolPackageFormat=snupkg
+        run: dotnet pack -c Release --include-source -p:SymbolPackageFormat=snupkg
       - name: NuGet push
         run: dotnet nuget push -s https://api.nuget.org/v3/index.json -k ${{secrets.NUGET_API_KEY}}
         if: ${{ github.ref == 'refs/heads/master' }}
