--- a/FSharp.Data.Tdms.DesignTime/FSharp.Data.Tdms.DesignTime.fsproj
+++ b/FSharp.Data.Tdms.DesignTime/FSharp.Data.Tdms.DesignTime.fsproj
@@ -46,12 +46,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.TypeProviders.SDK" Version="8.0.2" />
+    <PackageReference Include="FSharp.TypeProviders.SDK" Version="8.0.2">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="MinVer" Version="4.2.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Update="FSharp.Core" Version="6.0.6" />
+    <PackageReference Update="FSharp.Core" Version="6.0.7">
+      <ExcludeAssets>all</ExcludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Memory" Version="4.5.5" />
     <PackageReference Include="System.Text.Encoding" Version="4.3.0" /> 
   </ItemGroup>
